[gd_scene load_steps=19 format=3 uid="uid://2w5gk2bibym4"]

[ext_resource type="Script" path="res://Carpeta de Scripts/menu_de_juego.gd" id="1_icmkb"]
[ext_resource type="Texture2D" uid="uid://wlrafh3twveu" path="res://Assets a Usar/Clouds/Clouds 7/1.png" id="1_pj4w5"]
[ext_resource type="Shader" path="res://shaderMovimiento.gdshader" id="2_hhby6"]
[ext_resource type="Texture2D" uid="uid://dnjbdymkaqjfd" path="res://Assets a Usar/Clouds/Clouds 7/2.png" id="2_qbu1d"]
[ext_resource type="Texture2D" uid="uid://ce38qojhor2j5" path="res://Assets a Usar/Clouds/Clouds 7/3.png" id="3_86sko"]
[ext_resource type="Texture2D" uid="uid://oinr40qaugpx" path="res://Assets a Usar/Clouds/Clouds 7/4.png" id="4_nptvr"]
[ext_resource type="FontFile" uid="uid://dxaiig8i87vno" path="res://Stacked pixel.ttf" id="5_vfsi4"]
[ext_resource type="Texture2D" uid="uid://ba43e3xlrome8" path="res://Assets a Usar/CasualGameButtonsVol02/PNG/CGB02-orange_L_btn.png" id="6_ejggk"]
[ext_resource type="Texture2D" uid="uid://dp22m2ahj7cos" path="res://Assets a Usar/CasualGameButtonsVol02/PNG/CGB02-red_L_btn.png" id="7_jddtw"]
[ext_resource type="Texture2D" uid="uid://c7d7pnfekcwfu" path="res://Assets a Usar/CasualGameButtonsVol02/PNG/CGB02-red_S_btn.png" id="8_lfpql"]
[ext_resource type="AudioStream" uid="uid://bcawbug7ft0k3" path="res://Audios/interfaz/pressedOnline.wav" id="11_ygeb7"]
[ext_resource type="AudioStream" uid="uid://b2qbe4w7km31x" path="res://Audios/interfaz/Pvp.wav" id="12_mcvkd"]
[ext_resource type="AudioStream" uid="uid://cu7lgynilfsw0" path="res://Audios/interfaz/TablaP.wav" id="13_c838a"]
[ext_resource type="AudioStream" uid="uid://colgiht8smavs" path="res://Audios/musicaesc/menus.wav" id="14_cklbx"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_54xj8"]
shader = ExtResource("2_hhby6")
shader_parameter/scroll_speed = 0.1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_18wva"]
shader = ExtResource("2_hhby6")
shader_parameter/scroll_speed = 0.1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_djh52"]
shader = ExtResource("2_hhby6")
shader_parameter/scroll_speed = 0.1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vt0f1"]
shader = ExtResource("2_hhby6")
shader_parameter/scroll_speed = 0.1

[node name="Menu De juego" type="Node2D"]
script = ExtResource("1_icmkb")

[node name="Fondo Inicio" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Fondo Inicio"]
position = Vector2(603, 307)
scale = Vector2(1.84, 2)

[node name="Sprite2D" type="Sprite2D" parent="Fondo Inicio/ParallaxLayer"]
texture_repeat = 2
material = SubResource("ShaderMaterial_54xj8")
position = Vector2(192.755, 117.22)
scale = Vector2(1.84, 2)
texture = ExtResource("1_pj4w5")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="Fondo Inicio"]
position = Vector2(603, 307)
scale = Vector2(1.84, 2)

[node name="Sprite2D" type="Sprite2D" parent="Fondo Inicio/ParallaxLayer2"]
texture_repeat = 2
material = SubResource("ShaderMaterial_18wva")
position = Vector2(192.755, 117.22)
scale = Vector2(1.84, 2)
texture = ExtResource("2_qbu1d")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="Fondo Inicio"]
position = Vector2(603, 307)
scale = Vector2(1.84, 2)

[node name="Sprite2D" type="Sprite2D" parent="Fondo Inicio/ParallaxLayer3"]
texture_repeat = 2
material = SubResource("ShaderMaterial_djh52")
position = Vector2(192.755, 117.22)
scale = Vector2(1.84, 2)
texture = ExtResource("3_86sko")

[node name="ParallaxLayer4" type="ParallaxLayer" parent="Fondo Inicio"]
position = Vector2(603, 307)
scale = Vector2(1.84, 2)

[node name="Sprite2D" type="Sprite2D" parent="Fondo Inicio/ParallaxLayer4"]
texture_repeat = 2
material = SubResource("ShaderMaterial_vt0f1")
position = Vector2(192.755, 117.22)
scale = Vector2(1.84, 2)
texture = ExtResource("4_nptvr")

[node name="Contenedor Opciones" type="VBoxContainer" parent="."]
offset_left = 264.0
offset_top = 624.0
offset_right = 784.0
offset_bottom = 778.0

[node name="Opciones" type="Button" parent="Contenedor Opciones"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_vfsi4")
theme_override_font_sizes/font_size = 85
text = "Opciones"
icon = ExtResource("6_ejggk")
flat = true
icon_alignment = 1

[node name="Contenedor Coop" type="VBoxContainer" parent="."]
offset_left = 261.0
offset_top = 331.0
offset_right = 781.0
offset_bottom = 479.0

[node name="Modo Coop" type="Button" parent="Contenedor Coop"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_vfsi4")
theme_override_font_sizes/font_size = 85
text = "Cooperativo"
icon = ExtResource("6_ejggk")
flat = true
icon_alignment = 1

[node name="Contenedor Online" type="VBoxContainer" parent="."]
offset_left = 1077.0
offset_top = 331.0
offset_right = 1597.0
offset_bottom = 479.0

[node name="Modo Online" type="Button" parent="Contenedor Online"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_vfsi4")
theme_override_font_sizes/font_size = 85
text = "Online
"
icon = ExtResource("6_ejggk")
flat = true
icon_alignment = 1

[node name="Contenedor LeaderBoard" type="VBoxContainer" parent="."]
offset_left = 1077.0
offset_top = 624.0
offset_right = 1597.0
offset_bottom = 772.0

[node name="Tabla de puntuaciones" type="Button" parent="Contenedor LeaderBoard"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_vfsi4")
theme_override_font_sizes/font_size = 85
text = "Puntajes"
icon = ExtResource("7_jddtw")
flat = true
icon_alignment = 1

[node name="Contenedor Regresar" type="VBoxContainer" parent="."]
offset_right = 136.0
offset_bottom = 148.0

[node name="Regresar" type="Button" parent="Contenedor Regresar"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_vfsi4")
theme_override_font_sizes/font_size = 85
text = " â†©"
icon = ExtResource("8_lfpql")
flat = true
icon_alignment = 1

[node name="online" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_ygeb7")

[node name="pvp" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_mcvkd")

[node name="leaderboard" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_c838a")

[node name="menu" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_cklbx")

[connection signal="pressed" from="Contenedor Opciones/Opciones" to="." method="_on_opciones_pressed"]
[connection signal="pressed" from="Contenedor Coop/Modo Coop" to="." method="_on_modo_coop_pressed"]
[connection signal="pressed" from="Contenedor Online/Modo Online" to="." method="_on_modo_online_pressed"]
[connection signal="pressed" from="Contenedor LeaderBoard/Tabla de puntuaciones" to="." method="_on_tabla_de_puntuaciones_pressed"]
[connection signal="pressed" from="Contenedor Regresar/Regresar" to="." method="_on_regresar_pressed"]
[connection signal="finished" from="online" to="." method="_on_online_finished"]
[connection signal="finished" from="pvp" to="." method="_on_pvp_finished"]
[connection signal="finished" from="leaderboard" to="." method="_on_leaderboard_finished"]
